YoctoV290: H3 view boards
Support for YoctoV290 boards:
 - H3ULCB.HAD
 - H3ULCB.View
 - Salvator-x.View

Signed-off-by: Vladimir Barinov <vladimir.barinov@cogentembedded.com>

--- a/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/bsp/local-wayland.conf
+++ b/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/bsp/local-wayland.conf
@@ -36,6 +36,10 @@
 # This sets the default machine to be qemux86 if no other machine is selected:
 MACHINE ??= "h3ulcb"
 SOC_FAMILY = "r8a7795"
+# Enable HAD IO configuration
+#MACHINE_FEATURES_append = " h3ulcb-had"
+# Enable VIEW IO configuration
+#MACHINE_FEATURES_append = " h3ulcb-view"
 
 #
 # Where to place downloads
