--- a/meta-rcar-gen3/docs/sample/conf/salvator-x/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3/docs/sample/conf/salvator-x/linaro-gcc/bsp/local.conf
@@ -40,6 +40,8 @@ MACHINE ??= "salvator-x"
 # H3: r8a7795, M3: r8a7796
 SOC_FAMILY = "r8a7795"
 #SOC_FAMILY = "r8a7796"
+# Enable VIEW IO configuration
+#MACHINE_FEATURES_append = " salvator-x-view"
 
 #
 # Where to place downloads
