MTD: add linux operations with HyperFlash
To identify partition to modify:
$ cat proc/mtd

To write u-boot firmware:
$ flashcp u-boot.bin /dev/mtd5

--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
@@ -6,6 +6,8 @@ CONFIG_CAN_RCAR=y
 CONFIG_CANFD_RCAR=y
 CONFIG_EXTRA_FIRMWARE="r8a779x_usb3_v2.dlmem"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+CONFIG_MTD=y
+CONFIG_MTD_RPC_HYPERFLASH=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_FIXED_PHY=y
 CONFIG_SPI_BITBANG=y
