--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
@@ -9,6 +9,7 @@ CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_MTD=y
 CONFIG_MTD_RPC_HYPERFLASH=y
 CONFIG_BLK_DEV_NVME=m
+CONFIG_SATA_ACARD_AHCI=y
 CONFIG_FIXED_PHY=y
 CONFIG_SPI_BITBANG=y
 CONFIG_SPI_GPIO=y
