ClickThrough build fix
This fixes MMP build with ClickThrough packages.

The Video ClickThrough packages are packed so that they have EVA_ prfix
in both *.tar.bz2 file and extraced src directory.

Add DISTRO_FEATURES_append = " use_eva_pkg" for builds with ClickThrough packages.
By default this option disabled.

Signed-off-by: Yusuke Goda <yusuke.goda.sx@renesas.com>
Signed-off-by: Vladimir Barinov <vladimir.barinov@cogentembedded.com>

--- a/meta-rcar-gen3/docs/sample/conf/salvator-x/linaro-gcc/mmp/local-wayland.conf
+++ b/meta-rcar-gen3/docs/sample/conf/salvator-x/linaro-gcc/mmp/local-wayland.conf
@@ -365,3 +365,6 @@ DISTRO_FEATURES_append = " aaclcdec_mdw"
 # Linux ICCOM driver (RCG3ZLIDL4001ZNO)
 # Linux ICCOM library (RCG3ZLILL4001ZNO)
 #DISTRO_FEATURES_append = " iccom"
+
+# Evaluation packages
+#DISTRO_FEATURES_append = " use_eva_pkg"
