Fix eMMC and SD data integrity issue
Fix data destruction at the time of read access to eMMC and SD card

--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/salvator-x/salvator-x.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/salvator-x/salvator-x.cfg
@@ -14,3 +14,5 @@ CONFIG_SOC_CAMERA_MAX9286_MAX9271_OV106XX=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_RCAR=y
+CONFIG_MMC_SDHI_PRE_REQ=y
+CONFIG_MMC_SDHI_SEQ=y
