GEN2: add defaults wheat board configs.
We provide 3 types of configs:
1. bsp -> build image without sgx and multimedia proprietary pkgs
2. mmp -> build image with multimedia(vspm, mmngr) propritary pkgs
3. sgx -> build image with sgx and multimedia(vspm, mmngr) propritary pkgs

--- a/meta-rcar-gen2/docs/sample/conf/wheat/mmp/local.conf
+++ b/meta-rcar-gen2/docs/sample/conf/wheat/mmp/local.conf
@@ -85,7 +85,7 @@ MACHINE = "wheat"
 # Ultimately when creating custom policy, people will likely end up subclassing 
 # these defaults.
 #
-DL_DIR = "/home/kls/sources/renesas_bsp/yocto/DL_DIR"
+#DL_DIR ?= "${TOPDIR}/downloads"
 
 DISTRO ?= "poky"
 # As an example of a subclass there is a "bleeding" edge policy configuration
@@ -258,18 +258,21 @@ LICENSE_FLAGS_WHITELIST = "commercial"
 # Include static library in SDK
 SDKIMAGE_FEATURES_append = " staticdev-pkgs"
 
+# Enable vsp and mmngr Pkgs 
+MACHINE_FEATURES_append = " multimedia"
+
 # Enable Gfx Pkgs
-MACHINE_FEATURES_append = " sgx"
-MULTI_PROVIDER_WHITELIST += "virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"
+#MACHINE_FEATURES_append = " sgx"
+#MULTI_PROVIDER_WHITELIST += "virtual/libgl virtual/egl virtual/libgles1 virtual/libgles2"
 
 # for Wayland/Weston
-PREFERRED_PROVIDER_virtual/libgles1 = ""
-PREFERRED_PROVIDER_virtual/libgles2 = "gles-user-module"
-PREFERRED_PROVIDER_virtual/egl = "libegl"
-PREFERRED_PROVIDER_virtual/libgl = ""
-PREFERRED_PROVIDER_virtual/mesa = ""
-PREFERRED_PROVIDER_libgbm = "libgbm"
-PREFERRED_PROVIDER_libgbm-dev = "libgbm"
+#PREFERRED_PROVIDER_virtual/libgles1 = ""
+#PREFERRED_PROVIDER_virtual/libgles2 = "gles-user-module"
+#PREFERRED_PROVIDER_virtual/egl = "libegl"
+#PREFERRED_PROVIDER_virtual/libgl = ""
+#PREFERRED_PROVIDER_virtual/mesa = ""
+#PREFERRED_PROVIDER_libgbm = "libgbm"
+#PREFERRED_PROVIDER_libgbm-dev = "libgbm"
 
 BBMASK = "mesa-gl"
 
@@ -278,7 +281,6 @@ DISTRO_FEATURES_remove=" x11"
 DISTRO_FEATURES_append=" wayland"
 
 BBMASK .= "|.meta-renesas-v2h/meta-rcar-gen2/recipes-graphics/cogl"
-
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
