GEN2: update build configs
Now mmp and sgx configs set v4l-renderer for weston.

--- a/meta-rcar-gen2/docs/sample/conf/wheat/sgx/local.conf
+++ b/meta-rcar-gen2/docs/sample/conf/wheat/sgx/local.conf
@@ -260,6 +260,7 @@ SDKIMAGE_FEATURES_append = " staticdev-pkgs"
 
 # Enable vsp and mmngr Pkgs 
 MACHINE_FEATURES_append = " multimedia"
+DISTRO_FEATURES_append = "v4l2-renderer"
 
 # Enable Gfx Pkgs
 MACHINE_FEATURES_append = " sgx"
