Gen2: Blanche/Wheat u-boot conf

--- a/meta-rcar-gen2/conf/machine/blanche.conf
+++ b/meta-rcar-gen2/conf/machine/blanche.conf
@@ -25,12 +25,12 @@ PREFERRED_PROVIDER_virtual/egl = "${@base_contains("DISTRO_FEATURES", "wayland",
 KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/r8a7792-blanche.dts"
 
 # u-boot
-PREFERRED_VERSION_u-boot = "v2015.07%"
+PREFERRED_VERSION_u-boot = "rmobile%"
 EXTRA_IMAGEDEPENDS += " u-boot"
 
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
 
-UBOOT_MACHINE ?= "silk_config"
+UBOOT_MACHINE ?= "blanche_config"
 UBOOT_ENTRYPOINT = "0x40008000"
 UBOOT_LOADADDRESS = "0x40007fc0"
 
