--- a/meta-rcar-gen2/conf/machine/wheat.conf
+++ b/meta-rcar-gen2/conf/machine/wheat.conf
@@ -24,12 +24,12 @@ PREFERRED_PROVIDER_u-boot = "u-boot"
 KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/r8a7792-wheat.dts"
 
 # u-boot
-PREFERRED_VERSION_u-boot = "v2015.07%"
+PREFERRED_VERSION_u-boot = "rmobile%"
 EXTRA_IMAGEDEPENDS += " u-boot"
 
 KERNEL_EXTRA_ARGS += "LOADADDR=${UBOOT_ENTRYPOINT}"
 
-UBOOT_MACHINE ?= "silk_config"
+UBOOT_MACHINE ?= "wheat_config"
 UBOOT_ENTRYPOINT = "0x40008000"
 UBOOT_LOADADDRESS = "0x40007fc0"
 
