GEN2: fix machine descriptions

--- a/meta-rcar-gen2/conf/machine/blanche.conf
+++ b/meta-rcar-gen2/conf/machine/blanche.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Blanche machine
-#@DESCRIPTION: Machine configuration for running Salvator-X
+#@DESCRIPTION: Machine configuration for running Blanche
 
 SOC_FAMILY = "rcar-gen2:r8a7792"
 require conf/machine/include/soc-family.inc
