--- a/meta-rcar-gen2/conf/machine/wheat.conf
+++ b/meta-rcar-gen2/conf/machine/wheat.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Blanche machine
-#@DESCRIPTION: Machine configuration for running Salvator-X
+#@DESCRIPTION: Machine configuration for running Wheat
 
 SOC_FAMILY = "rcar-gen2:r8a7792"
 require conf/machine/include/soc-family.inc
@@ -20,7 +20,7 @@ PREFERRED_PROVIDER_linux-libc-headers = "linux-libc-headers"
 PREFERRED_PROVIDER_nativesdk-linux-libc-headers = "nativesdk-linux-libc-headers"
 PREFERRED_PROVIDER_u-boot = "u-boot"
 
-# Device tree for Blanche
+# Device tree for Wheat
 KERNEL_DEVICETREE = "${S}/arch/arm/boot/dts/r8a7792-wheat.dts"
 
 # u-boot
