--- a/meta-rcar-gen2/conf/machine/blanche.conf
+++ b/meta-rcar-gen2/conf/machine/blanche.conf
@@ -40,6 +40,6 @@ PREFERRED_VERSION_libdrm = "2.4.68"
 # Add variable to Build Configuration in build log
 BUILDCFG_VARS_append = " SOC_FAMILY"
 
-MACHINE_EXTRA_RRECOMMENDS = " kernel-modules"
+MACHINE_EXTRA_RRECOMMENDS = " kernel-modules kernel-devicetree"
 
 MACHINE_FEATURES = "apm vfat alsa ethernet"
