Gen3: H3/M3 Kingfisher board support
- Kingfisher extension board support
- remove hacks in LVDS cameras
- fix RDCAM21 read fails by adding small delay between addressing and read

--- a/meta-rcar-gen3/docs/sample/conf/m3ulcb/linaro-gcc/bsp/local-wayland.conf
+++ b/meta-rcar-gen3/docs/sample/conf/m3ulcb/linaro-gcc/bsp/local-wayland.conf
@@ -38,6 +38,8 @@ MACHINE ??= "m3ulcb"
 SOC_FAMILY = "r8a7796"
 # Enable VIEW IO configuration
 #MACHINE_FEATURES_append = " m3ulcb-view"
+# Enable Kingfisher IO configuration
+#MACHINE_FEATURES_append = " m3ulcb-kf"
 
 #
 # Where to place downloads
