--- a/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/mmp/local-wayland.conf
+++ b/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/mmp/local-wayland.conf
@@ -40,6 +40,8 @@ SOC_FAMILY = "r8a7795"
 #MACHINE_FEATURES_append = " h3ulcb-had"
 # Enable VIEW IO configuration
 #MACHINE_FEATURES_append = " h3ulcb-view"
+# Enable Kingfisher IO configuration
+#MACHINE_FEATURES_append = " h3ulcb-kf"
 
 #
 # Where to place downloads
