--- a/meta-rcar-gen3/docs/sample/conf/m3ulcb/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3/docs/sample/conf/m3ulcb/linaro-gcc/bsp/local.conf
@@ -38,6 +38,8 @@ MACHINE ??= "m3ulcb"
 SOC_FAMILY = "r8a7796"
 # Enable VIEW IO configuration
 #MACHINE_FEATURES_append = " m3ulcb-view"
+# Enable Kingfisher IO configuration
+#MACHINE_FEATURES_append = " m3ulcb-kf"
 
 #
 # Where to place downloads
