Gen3: enable PCA953 gpio expander in linux kernel

--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
@@ -13,6 +13,8 @@ CONFIG_SATA_ACARD_AHCI=y
 CONFIG_FIXED_PHY=y
 CONFIG_SPI_BITBANG=y
 CONFIG_SPI_GPIO=y
+CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_SOC_CAMERA_MAX9286_MAX9271=y
 CONFIG_SOC_CAMERA_MAX9271_OV106XX=y
