--- a/meta-rcar-gen3/recipes-graphics/wayland/weston-init/weston.service
+++ b/meta-rcar-gen3/recipes-graphics/wayland/weston-init/weston.service
@@ -9,6 +9,7 @@ Environment="XDG_RUNTIME_DIR=/run/user/root"
 ExecStartPre=/bin/mkdir -p /run/user/root
 ExecStartPre=/bin/chmod 0700 /run/user/root
 ExecStart=/usr/bin/openvt -v -e /usr/bin/weston -- $OPTARGS
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
