--- a/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/gfx-only/local-wayland.conf
+++ b/meta-rcar-gen3/docs/sample/conf/h3ulcb/linaro-gcc/gfx-only/local-wayland.conf
@@ -41,7 +41,7 @@ SOC_FAMILY = "r8a7795"
 # Enable VIEW IO configuration
 #MACHINE_FEATURES_append = " h3ulcb-view"
 # Enable Kingfisher IO configuration
-#MACHINE_FEATURES_append = " h3ulcb-kf"
+#MACHINE_FEATURES_append = " ulcb-kf"
 
 #
 # Where to place downloads
