--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
@@ -11,11 +11,13 @@ CONFIG_SATA_ACARD_AHCI=y
 CONFIG_FIXED_PHY=y
 CONFIG_SPI_BITBANG=y
 CONFIG_SPI_GPIO=y
+CONFIG_GPIO_MAX732X=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_SOC_CAMERA_MAX9286_MAX9271=y
 CONFIG_SOC_CAMERA_TI964_TI913=y
+CONFIG_SOC_CAMERA_TI954_TI913=y
 CONFIG_SOC_CAMERA_OV106XX=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
