--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/h3ulcb/h3ulcb.cfg
@@ -38,3 +38,5 @@ CONFIG_WL18XX=m
 CONFIG_WLCORE=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_SND_SOC_SI468X=y
+CONFIG_SND_SOC_PCM3168A_I2C=y
+CONFIG_SND_SOC_PCM3168A=y
