--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/eagle/eagle.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/eagle/eagle.cfg
@@ -5,6 +5,7 @@ CONFIG_CAN_DEV=y
 CONFIG_CAN_CALC_BITTIMING=y
 CONFIG_CAN_RCAR=y
 CONFIG_CANFD_RCAR=y
+CONFIG_DRM_I2C_ADV7511=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
