--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/salvator-x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/salvator-x.cfg
@@ -5,7 +5,7 @@ CONFIG_CAN_RAW=y
 CONFIG_CAN_DEV=y
 CONFIG_CAN_CALC_BITTIMING=y
 CONFIG_CAN_RCAR=y
-CONFIG_CANFD_RCAR=y
+CONFIG_CAN_RCAR_CANFD=y
 CONFIG_EXTRA_FIRMWARE="r8a779x_usb3_v2.dlmem"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
 CONFIG_VIDEO_ADV_DEBUG=y
