Gen3: Kingfisher: Add modem, RaspberryPi camera

--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
@@ -21,6 +21,8 @@ CONFIG_SOC_CAMERA_MAX9286_MAX9271=y
 CONFIG_SOC_CAMERA_TI964_TI9X3=y
 CONFIG_SOC_CAMERA_TI954_TI9X3=y
 CONFIG_SOC_CAMERA_OV106XX=y
+CONFIG_SOC_CAMERA_OV5647=y
+CONFIG_USB_ACM=m
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_RCAR=y
