[layer] Add more utils by default, add surroundview and opencv-sdk to DISTRO_FEATURES, disabel x11 by default

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -13,11 +13,13 @@ BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
 # Custom packages
 IMAGE_INSTALL_append_rcar-gen3 = " \
+    kernel-devicetree \
     can-utils \
     libsocketcan \
     iproute2 \
     spidev-dbg \
     e2fsprogs \
+    e2fsprogs-tune2fs \
     ethtool \
     pciutils \
     usbutils \
@@ -28,4 +30,19 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     iperf \
     bonnie++ \
     lmbench \
+    strace \
+    libpcap \
+    eglibc-utils \
+    ldd \
+    procps \
+    can-utils libsocketcan \
+    rsync \
+    mm-init \
 "
+
+DISTRO_FEATURES_remove="x11"
+DISTRO_FEATURES_append = " surroundview "
+DISTRO_FEATURES_append = " opencv-sdk "
+
+IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
+
