--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
@@ -54,3 +54,5 @@ CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 CONFIG_LSM9DS0=y
 CONFIG_DRM_I2C_ADV7511=y
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
