--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
@@ -56,3 +56,4 @@ CONFIG_LSM9DS0=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
+CONFIG_SERIAL_SH_SCI_DMA=y
