Gen3: MOST support

--- a/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
+++ b/meta-rcar-gen3/recipes-kernel/linux/linux-renesas/m3ulcb/m3ulcb.cfg
@@ -57,3 +57,10 @@ CONFIG_DRM_I2C_ADV7511=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_SERIAL_SH_SCI_DMA=y
+CONFIG_MOST=y
+CONFIG_MOSTCORE=y
+CONFIG_AIM_CDEV=y
+CONFIG_AIM_NETWORK=y
+CONFIG_AIM_SOUND=y
+CONFIG_AIM_V4L2=y
+CONFIG_HDM_DIM2=m
