--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -38,6 +38,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     can-utils libsocketcan \
     rsync \
     mm-init \
+    iio-utils \
 "
 
 DISTRO_FEATURES_remove="x11"
