--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -41,9 +41,22 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     iio-utils \
 "
 
+# Radio packages
+IMAGE_INSTALL_append_rcar-gen3 += " \
+    si-tools \
+    linux-firmware-wl18xx \
+    wireless-tools \
+    ti-bt-firmware \
+    bluez5 \
+    bluez5-testtools \
+    pulseaudio-module-bluez5-device \
+    pulseaudio-module-bluez5-discover \
+    pulseaudio-module-bluetooth-discover \
+    pulseaudio-module-bluetooth-policy \
+"
+
 DISTRO_FEATURES_remove="x11"
 DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
-
