Add EDT FT5X06 driver

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -63,3 +63,4 @@ CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 CONFIG_LSM9DS0=y
 CONFIG_DRM_I2C_ADV7511=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
