--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -31,6 +31,7 @@ CONFIG_SOC_CAMERA_TI964_TI9X3=y
 CONFIG_SOC_CAMERA_TI954_TI9X3=y
 CONFIG_SOC_CAMERA_OV106XX=y
 CONFIG_SOC_CAMERA_OV5647=y
+CONFIG_SOC_CAMERA_OV5642=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_RCAR=y
