--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -65,3 +65,4 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 CONFIG_LSM9DS0=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
+CONFIG_SERIAL_SH_SCI_DMA=y
