Kingfisher: add pulseaudio
Set kingfisher in DISTRO_FEATURES to enable multichannel audio

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -39,6 +39,11 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     rsync \
     mm-init \
     iio-utils \
+    pulseaudio-server \
+    pulseaudio-misc \
+    pulseaudio-module-cli \
+    pulseaudio-module-remap-sink \
+    pulseaudio-module-remap-source \
 "
 
 # Radio packages
