Image: install kernel-modules

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -13,6 +13,7 @@ BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
 # Custom packages
 IMAGE_INSTALL_append_rcar-gen3 = " \
+    kernel-modules \
     kernel-devicetree \
     can-utils \
     libsocketcan \
