--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -39,6 +39,9 @@ CONFIG_USB_ACM=y
 CONFIG_VIDEO_RENESAS_IMR=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
+CONFIG_BT_BNEP=m
+CONFIG_BT_RFCOMM=m
+CONFIG_BT_HIDP=m
 CONFIG_TI_ST=m
 CONFIG_BT_WILINK=m
 CONFIG_WEXT_CORE=y
