sound: fixes and improvements
PulseAudio: use one config for all boards
PulseAudio: fix config files installation
ofono: install ofono for HSP and HFP functionality
gstreamer: install pulseaudio stuff

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -45,6 +45,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     pulseaudio-module-cli \
     pulseaudio-module-remap-sink \
     pulseaudio-module-remap-source \
+    gstreamer1.0-plugins-good-pulse \
 "
 
 # Radio packages
@@ -60,6 +61,7 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
     pulseaudio-module-bluez5-discover \
     pulseaudio-module-bluetooth-discover \
     pulseaudio-module-bluetooth-policy \
+    ofono \
 "
 
 DISTRO_FEATURES_remove="x11"
