Kingfisher: enable PCM audio between CPU and BT module
Add dummy driver for wl18xx PCM.
Update dtb's. Update pulseaudio config.
Also add ofono-test.

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -55,6 +55,7 @@ CONFIG_WLCORE_SDIO=m
 CONFIG_SND_SOC_SI468X=y
 CONFIG_SND_SOC_PCM3168A=y
 CONFIG_SND_SOC_PCM3168A_I2C=y
+CONFIG_SND_SOC_WL18XX=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 CONFIG_HID_MULTITOUCH=y
