--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -62,6 +62,7 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
     pulseaudio-module-bluetooth-discover \
     pulseaudio-module-bluetooth-policy \
     ofono \
+    ofono-tests \
 "
 
 DISTRO_FEATURES_remove="x11"
