--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -73,3 +73,5 @@ DISTRO_FEATURES_append = " opencv-sdk "
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
 EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
+
+PREFERRED_VERSION_opencv = "3.2%"
