--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -70,3 +70,5 @@ DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
+
+PREFERRED_VERSION_opencv = "3.2%"
