--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -46,6 +46,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     pulseaudio-module-remap-sink \
     pulseaudio-module-remap-source \
     gstreamer1.0-plugins-good-pulse \
+    gdbserver \
 "
 
 # Radio packages
@@ -70,5 +71,7 @@ DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
+
+EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
 
 PREFERRED_VERSION_opencv = "2.4%"
