--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -70,3 +70,11 @@ CONFIG_LSM9DS0=y
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_SERIAL_SH_SCI_DMA=y
+CONFIG_STAGING=y
+CONFIG_MOST=y
+CONFIG_MOSTCORE=y
+CONFIG_AIM_CDEV=y
+CONFIG_AIM_NETWORK=y
+CONFIG_AIM_SOUND=y
+CONFIG_AIM_V4L2=y
+CONFIG_HDM_DIM2=y
