--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -47,6 +47,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     pulseaudio-module-remap-source \
     gstreamer1.0-plugins-good-pulse \
     gdbserver \
+    most-tools \
 "
 
 # Radio packages
