Kingfisher: bluetooth fixes
Add proper dbus configs
Enable bluetooth on startup

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -45,6 +45,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     pulseaudio-module-cli \
     pulseaudio-module-remap-sink \
     pulseaudio-module-remap-source \
+    pulseaudio-module-loopback \
     gstreamer1.0-plugins-good-pulse \
     gdbserver \
 "
@@ -69,6 +70,7 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
 DISTRO_FEATURES_remove="x11"
 DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
+DISTRO_FEATURES_append = " bluetooth"
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
