--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -48,6 +48,9 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     gstreamer1.0-plugins-good-pulse \
     gdbserver \
     most-tools \
+    perf \
+    dropbear \
+    opkg \
 "
 
 # Radio packages
