--- a/meta-rcar-gen3-adas/docs/sample/conf/v3msk/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/v3msk/linaro-gcc/bsp/local.conf
@@ -257,6 +257,9 @@ BBMASK .= "|gles-user-module|kernel-module-gles|wayland-kms|libgbm"
 # Mask MMP recipes
 BBMASK .= "|kernel-module-uvcs-drv|omx-user-module"
 
+# Add for gstreamer plugins ugly
+LICENSE_FLAGS_WHITELIST = "commercial"
+
 # Linux ICCOM driver (RCG3ZLIDL4001ZNO)
 # Linux ICCOM library (RCG3ZLILL4001ZNO)
 #DISTRO_FEATURES_append = " iccom"
