V3M: add V3MSK board in uboot
Support eMMC, QSPI, Ether, reset, CPLD, console

--- a/meta-rcar-gen3-adas/conf/machine/v3msk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3msk.conf
@@ -26,7 +26,7 @@ KERNEL_DEVICETREE = "renesas/r8a7797-v3msk.dtb"
 # u-boot
 PREFERRED_VERSION_u-boot = "v2015.04%"
 EXTRA_IMAGEDEPENDS += " u-boot"
-UBOOT_MACHINE = "r8a7797_eagle_defconfig"
+UBOOT_MACHINE = "v3msk_defconfig"
 
 # libdrm
 PREFERRED_VERSION_libdrm = "2.4.68"
