--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -71,6 +71,12 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
     ofono-tests \
 "
 
+# IMP
+IMAGE_INSTALL_append_rcar-gen3 += " \
+    kernel-module-uio-imp \
+    kernel-module-cmemdrv \
+"
+
 DISTRO_FEATURES_remove="x11"
 DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
