--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -81,6 +81,7 @@ DISTRO_FEATURES_remove="x11"
 DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
 DISTRO_FEATURES_append = " bluetooth"
+DISTRO_FEATURES_append = " pulseaudio"
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
