--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -75,6 +75,7 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
 IMAGE_INSTALL_append_rcar-gen3 += " \
     kernel-module-uio-imp \
     kernel-module-cmemdrv \
+    udev-rules-cvlib \
 "
 
 DISTRO_FEATURES_remove="x11"
