--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -79,3 +79,8 @@ CONFIG_AIM_SOUND=y
 CONFIG_AIM_V4L2=y
 CONFIG_HDM_DIM2=y
 CONFIG_UIO=y
+CONFIG_SENSORS_EMC2103=y
+CONFIG_PMBUS=y
+CONFIG_RTC_DRV_DS1307=y
+CONFIG_RTC_DRV_DS1307_HWMON=y
+CONFIG_SENSORS_LM63=y
