--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -78,6 +78,12 @@ IMAGE_INSTALL_append_r8a7797 += " \
     udev-rules-cvlib \
 "
 
+IMAGE_INSTALL_append_r8a7798 += " \
+    kernel-module-uio-imp \
+    kernel-module-cmemdrv \
+    udev-rules-cvlib \
+"
+
 DISTRO_FEATURES_remove="x11"
 DISTRO_FEATURES_append = " surroundview "
 DISTRO_FEATURES_append = " opencv-sdk "
