--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -36,7 +36,6 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     eglibc-utils \
     ldd \
     procps \
-    can-utils libsocketcan \
     rsync \
     mm-init \
     iio-utils \
@@ -52,6 +51,11 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     perf \
     dropbear \
     opkg \
+    git \
+    subversion \
+    nano \
+    cmake \
+    vim \
 "
 
 # Radio packages
@@ -92,6 +96,6 @@ DISTRO_FEATURES_append = " pulseaudio"
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
-EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
+EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug ssh-server-openssh"
 
 PREFERRED_VERSION_opencv = "2.4%"
