Pakcages: remove ssh-server-openssh, add spidev_test
1) revert ssh-server-openssh isnce conflicts with dropbear
2) add spidev_test

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -18,7 +18,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     can-utils \
     libsocketcan \
     iproute2 \
-    spidev-dbg \
+    spidev-dbg spidev-test \
     e2fsprogs \
     e2fsprogs-tune2fs \
     ethtool \
@@ -96,6 +96,6 @@ DISTRO_FEATURES_append = " pulseaudio"
 
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
-EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug ssh-server-openssh"
+EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
 
 PREFERRED_VERSION_opencv = "2.4%"
