--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -35,6 +35,7 @@ CONFIG_SPI_SLAVE=y
 CONFIG_SPI_SLAVE_TIME=y
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 CONFIG_SENSORS_LM63=y
+CONFIG_RCAR_THERMAL=y
 CONFIG_SH_ETH=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_SATA_ACARD_AHCI=y
