--- a/meta-rcar-gen3-addons/conf/layer.conf
+++ b/meta-rcar-gen3-addons/conf/layer.conf
@@ -10,3 +10,9 @@ BBFILES += " \
 BBFILE_COLLECTIONS += "rcar-gen3-addons"
 BBFILE_PATTERN_rcar-gen3-addons := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rcar-gen3-addons = "10"
+
+IMAGE_INSTALL_append = " \
+		mdadm \
+		lighttpd \
+		hdparm \
+"
