Fix opencv build
1) set building opencv 3.2 by default
2) fix build fail of glog

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -98,4 +98,4 @@ IMAGE_INSTALL_remove = " gtk+3-demo clutter-1.0-examples libx11-locale"
 
 EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
 
-PREFERRED_VERSION_opencv = "2.4%"
+# PREFERRED_VERSION_opencv = "2.4%"
