recipes-kernel: linux-renesas: Add V3H VIP devices support
This adds uio_pdrv_genirq module support.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/condor.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/condor.cfg
@@ -27,6 +27,7 @@ CONFIG_TOUCHSCREEN_PROPERTIES=y
 CONFIG_HID_MULTITOUCH=y
 CONFIG_SERIAL_SH_SCI_DMA=y
 CONFIG_UIO=y
+CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_SH_ETH=y
 CONFIG_SATA_ACARD_AHCI=y
 CONFIG_GPIO_SYSFS=y
