--- a/meta-rcar-gen3-adas/conf/machine/eagle.conf
+++ b/meta-rcar-gen3-adas/conf/machine/eagle.conf
@@ -23,6 +23,9 @@ SERIAL_CONSOLE = "115200 ttySC0"
 PREFERRED_PROVIDER_virtual/kernel = "linux-renesas"
 KERNEL_DEVICETREE = "renesas/r8a7797-eagle.dtb"
 
+# Configuration for CR7 Loader
+EXTRA_IMAGEDEPENDS += " cr7-loader"
+
 # Configuration for ARM Trusted Firmware
 EXTRA_IMAGEDEPENDS += " arm-trusted-firmware"
 
