Add extra packages and extra image features

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -18,6 +18,8 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     can-utils \
     libsocketcan \
     iproute2 \
+    iproute2-tc \
+    linuxptp \
     spidev-dbg spidev-test \
     e2fsprogs \
     e2fsprogs-tune2fs \
@@ -52,10 +54,16 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     dropbear \
     opkg \
     git \
+    git-perltools \
     subversion \
     nano \
     cmake \
+    make \
+    gcc \
+    g++ \
+    gdb \
     vim \
+    trace-cmd \
 "
 
 # Radio packages
@@ -97,5 +105,15 @@ DISTRO_FEATURES_append = " pulseaudio"
 IMAGE_INSTALL_remove = "gtk+3-demo clutter-1.0-examples"
 
 EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
+
+EX_IMG_FEATURES = " \
+    dev-pkgs \
+    tools-sdk \
+    tools-profile \
+    tools-debug \
+    package-management \
+"
+EXTRA_IMAGE_FEATURES_append_r8a7797 += " ${EX_IMG_FEATURES}"
+EXTRA_IMAGE_FEATURES_append_r8a7798 += " ${EX_IMG_FEATURES}"
 
 PREFERRED_VERSION_opencv = "2.4%"
