--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -31,7 +31,7 @@ CONFIG_SOC_CAMERA_MAX9286=y
 CONFIG_SOC_CAMERA_TI9X4=y
 CONFIG_SOC_CAMERA_OV106XX=y
 # CONFIG_SOC_CAMERA_OV5647 is not set
-# CONFIG_SOC_CAMERA_OV5642 is not set
+CONFIG_SOC_CAMERA_OV5642=y
 CONFIG_VIDEO_RENESAS_IMR=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
