--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -81,6 +81,7 @@ IMAGE_INSTALL_append_rcar-gen3 += " \
     pulseaudio-module-bluetooth-policy \
     ofono \
     ofono-tests \
+    br-test \
 "
 
 # IMP
