Add IMR UIO support.
V4L2 RCAR IMR driver is now a module.
V4L2 driver is loaded by default.

NOTE: Aso Update IMR driver to make cherry-pick possible:
RAW DL support.
RSE support.

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -34,6 +34,10 @@ CONFIG_SOC_CAMERA_OV5647=y
 CONFIG_SOC_CAMERA_OV5642=y
 CONFIG_SOC_CAMERA_IMX219=y
 CONFIG_VIDEO_RENESAS_IMR=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_PLATFORM=y
+CONFIG_USB_XHCI_RCAR=y
+CONFIG_USB_ACM=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
