--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
@@ -13,6 +13,7 @@ CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_RCAR_VIN_LEGACY=y
 CONFIG_VIDEO_RCAR_CSI2_LEGACY=y
+CONFIG_VIDEO_RCAR_ISP_LEGACY=y
 # CONFIG_VIDEO_RCAR_VIN is not set
 # CONFIG_VIDEO_RCAR_CSI2 is not set
 CONFIG_SOC_CAMERA=y
