--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -28,7 +28,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     usbutils \
     util-linux \
     mtd-utils \
-    capture \
+    capture capture_drm \
     v4l2-fw \
     iperf \
     bonnie++ \
