VB2: enable driver for DCDC converters
To add devices run:
echo tps544c20 0x24 > /sys/bus/i2c/devices/i2c-17/new_device
echo tps544c20 0x2c > /sys/bus/i2c/devices/i2c-17/new_device

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -81,6 +81,7 @@ CONFIG_HDM_DIM2=y
 CONFIG_UIO=y
 CONFIG_SENSORS_EMC2103=y
 CONFIG_PMBUS=y
+CONFIG_SENSORS_PMBUS=y
 CONFIG_RTC_DRV_DS1307=y
 CONFIG_RTC_DRV_DS1307_HWMON=y
 CONFIG_SENSORS_LM63=y
