Add yaml, libinput and linux-renesas-uapi packages to the image and SDK.

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -64,6 +64,9 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     gdb \
     vim \
     trace-cmd \
+    libyaml \
+    libinput \
+    linux-renesas-uapi \
 "
 
 # Radio packages
