Layer.conf: fix image appends
  - install radio packages only when machine is ulcb.
  - netevent package is istalled by default.

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -67,10 +67,11 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     libyaml \
     libinput \
     linux-renesas-uapi \
+    netevent \
 "
 
 # Radio packages
-IMAGE_INSTALL_append_rcar-gen3 += " \
+IMAGE_INSTALL_append_ulcb += " \
     si-tools \
     linux-firmware-wl18xx \
     wireless-tools \
