layer.conf: update installed package list.
- use openssh instead of dropbear
- add devmem2 package

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -51,7 +51,6 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     gdbserver \
     most-tools \
     perf \
-    dropbear \
     opkg \
     git \
     git-perltools \
@@ -64,6 +63,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     gdb \
     vim \
     trace-cmd \
+    devmem2 \
     libyaml \
     libinput \
     linux-renesas-uapi \
@@ -126,6 +126,7 @@ EX_IMG_FEATURES = " \
     tools-profile \
     tools-debug \
     package-management \
+    ssh-server-openssh \
 "
 EXTRA_IMAGE_FEATURES_append_r8a7797 += " ${EX_IMG_FEATURES}"
 EXTRA_IMAGE_FEATURES_append_r8a7798 += " ${EX_IMG_FEATURES}"
