layer.conf: fix IMAGE_INSTALL_append.
Radio package should be install on all boards except rcar-gen3-adas.
Condor, eagle, v3hsk and v3msk don't have "radio" peripherals (wifi, fm or other).

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -11,6 +11,24 @@ BBFILE_COLLECTIONS += "rcar-gen3-adas"
 BBFILE_PATTERN_rcar-gen3-adas := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
+# Radio packages
+RADIO_PACKAGES =" \
+    si-tools \
+    linux-firmware-wl18xx \
+    wireless-tools \
+    ti-bt \
+    ti-bt-firmware \
+    bluez5 \
+    bluez5-testtools \
+    pulseaudio-module-bluez5-device \
+    pulseaudio-module-bluez5-discover \
+    pulseaudio-module-bluetooth-discover \
+    pulseaudio-module-bluetooth-policy \
+    ofono \
+    ofono-tests \
+    br-test \
+"
+
 # Custom packages
 IMAGE_INSTALL_append_rcar-gen3 = " \
     kernel-modules \
@@ -70,22 +88,12 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     netevent \
 "
 
-# Radio packages
-IMAGE_INSTALL_append_ulcb += " \
-    si-tools \
-    linux-firmware-wl18xx \
-    wireless-tools \
-    ti-bt \
-    ti-bt-firmware \
-    bluez5 \
-    bluez5-testtools \
-    pulseaudio-module-bluez5-device \
-    pulseaudio-module-bluez5-discover \
-    pulseaudio-module-bluetooth-discover \
-    pulseaudio-module-bluetooth-policy \
-    ofono \
-    ofono-tests \
-    br-test \
+IMAGE_INSTALL_append_rcar-gen3 += " \
+    ${RADIO_PACKAGES} \
+"
+
+IMAGE_INSTALL_remove_rcar-gen3-adas = " \
+    ${RADIO_PACKAGES} \
 "
 
 # IMP
