--- a/meta-rcar-gen3-adas/conf/machine/v3msk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3msk.conf
@@ -25,6 +25,9 @@ SERIAL_CONSOLE = "115200 ttySC0"
 PREFERRED_PROVIDER_virtual/kernel = "linux-renesas"
 KERNEL_DEVICETREE = "renesas/r8a77970-v3msk.dtb"
 
+# Configuration for CR7 Loader
+EXTRA_IMAGEDEPENDS += " cr7-loader"
+
 # Configuration for ARM Trusted Firmware
 EXTRA_IMAGEDEPENDS += " arm-trusted-firmware"
 
