recipes-kernel: linux-renesas: Enable Thine THC63LVD1024 LVDS decoder
This enables Thine THC63LVD1024 LVDS decoder in
v3msk, v3hsk, eagle, and condor configurations.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3msk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3msk.cfg
@@ -37,3 +37,4 @@ CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 CONFIG_SENSORS_LM63=y
 CONFIG_RCAR_THERMAL=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_DRM_THINE_THC63LVD1024=y
