--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
@@ -32,3 +32,4 @@ CONFIG_INPUT_DA9063_ONKEY=y
 CONFIG_DA9063_WATCHDOG=y
 CONFIG_REGULATOR_DA9063=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_DRM_THINE_THC63LVD1024=y
