--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -11,91 +11,27 @@ BBFILE_COLLECTIONS += "rcar-gen3-adas"
 BBFILE_PATTERN_rcar-gen3-adas := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
-# Custom packages
-IMAGE_INSTALL_append_rcar-gen3 = " \
-    kernel-modules \
-    kernel-devicetree \
-    can-utils \
-    libsocketcan \
-    iproute2 \
-    spidev-dbg spidev-test \
-    e2fsprogs \
-    e2fsprogs-tune2fs \
-    ethtool \
-    pciutils \
-    usbutils \
-    util-linux \
-    mtd-utils \
-    capture \
-    v4l2-fw \
-    iperf3 \
-    bonnie++ \
-    lmbench \
-    strace \
-    libpcap \
-    eglibc-utils \
-    ldd \
-    procps \
-    rsync \
-    mm-init \
-    iio-utils \
-    pulseaudio-server \
-    pulseaudio-misc \
-    pulseaudio-module-cli \
-    pulseaudio-module-remap-sink \
-    pulseaudio-module-remap-source \
-    pulseaudio-module-loopback \
-    gstreamer1.0-plugins-good-pulse \
-    gdbserver \
-    most-tools \
-    perf \
-    ${@bb.utils.contains("IMAGE_FEATURES", "ssh-server-openssh", "", "dropbear",d)} \
-    opkg \
-    git \
-    subversion \
-    nano \
-    cmake \
-    vim \
-"
-
-# Radio packages
-IMAGE_INSTALL_append_rcar-gen3 += " \
-    si-tools \
-    linux-firmware-wl18xx \
-    wireless-tools \
-    ti-bt \
-    ti-bt-firmware \
-    bluez5 \
-    bluez5-testtools \
-    pulseaudio-module-bluez5-device \
-    pulseaudio-module-bluez5-discover \
-    pulseaudio-module-bluetooth-discover \
-    pulseaudio-module-bluetooth-policy \
-    ofono \
-    ofono-tests \
-"
-
-# IMP
-IMAGE_INSTALL_append_r8a77970 += " \
-    kernel-module-uio-imp \
-    kernel-module-cmemdrv \
-    udev-rules-cvlib \
-"
-
-IMAGE_INSTALL_append_r8a77980 += " \
-    kernel-module-uio-imp \
-    kernel-module-cmemdrv \
-    udev-rules-cvlib \
-"
-
+# Distro features needed for all boards
 DISTRO_FEATURES_remove = "x11"
-DISTRO_FEATURES_append = " surroundview"
-DISTRO_FEATURES_append = " opencv-sdk"
-DISTRO_FEATURES_append = " bluetooth"
-DISTRO_FEATURES_append = " pulseaudio"
+DISTRO_FEATURES_append = " surroundview opencv-sdk"
 
+# Distro features needed for non V3x only (default)
+VAR_FEATURES = "bluetooth pulseaudio"
+# Distro features needed for V3x only
+VAR_FEATURES_rcar-gen3-v3x = ""
+DISTRO_FEATURES_append = " ${VAR_FEATURES}"
+
+# Is it still needed with x11 feature removed?
 IMAGE_INSTALL_remove = " gtk+3-demo clutter-1.0-examples libx11-locale"
 
-EXTRA_IMAGE_FEATURES_append_rcar-gen3 = " eclipse-debug"
-
-# PREFERRED_VERSION_opencv = "2.4%"
+# For e2studio
+EXTRA_IMAGE_FEATURES_append = " eclipse-debug"
+# Extra image features rquested by Renesas
+EXTRA_IMAGE_FEATURES_append = " \
+    dev-pkgs \
+    tools-sdk \
+    tools-profile \
+    tools-debug \
+    package-management \
+    ssh-server-openssh \
+"
