linux-renesas: V3Hsk config: Fix some merge conflicts.

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -39,9 +39,7 @@ CONFIG_RCAR_THERMAL=y
 CONFIG_SH_ETH=y
 CONFIG_BLK_DEV_NVME=m
 CONFIG_SATA_ACARD_AHCI=y
-<<<<<<< HEAD
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
-=======
 CONFIG_MCP4725=y
->>>>>>> 84bdc15... V3H: VB: add 8channel VideoBox for V3H support
+CONFIG_PHY_RCAR_GEN3_PCIE=y
