recipes-kernel: linux-renesas: fix i2c stuck issue on Kingfisher
It was found that PCM3168A can hold SDA line while in reset.
If Audio i2c sub-bus is accessed before PCM is taken out of reset
whole i2c2 bus will stuck. To avoid this:
-PCM3168A reset deasserted as early as posible (gpio hog)
-LSM9DS0 driver moved to module so it will probe after PCM3168A
-PCA9548 (i2c bus multiplexer) will be reset in case of i2c error
this will isolate 'broken' sub-bus from master i2c bus.

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -63,7 +63,7 @@ CONFIG_IIO_KFIFO_BUF=y
 CONFIG_IIO_TRIGGERED_BUFFER=y
 CONFIG_IIO_TRIGGER=y
 CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
-CONFIG_LSM9DS0=y
+CONFIG_LSM9DS0=m
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_SERIAL_SH_SCI_DMA=y
