Qt5 recipe patches

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -35,3 +35,5 @@ EXTRA_IMAGE_FEATURES_append = " \
     package-management \
     ssh-server-openssh \
 "
+
+BBMASK_append = " ${@'' if 'qt5' in '${DISTRO_FEATURES}' else ' meta-rcar-gen3-adas/recipes-qt/.*bb'}"
