conf: machine: m3nulcb: Update U-Boot machine name
This updates UBOOT_MACHINE to "r8a77965_ulcb_defconfig"

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/machine/m3nulcb.conf
+++ b/meta-rcar-gen3-adas/conf/machine/m3nulcb.conf
@@ -31,7 +31,7 @@ EXTRA_IMAGEDEPENDS += " arm-trusted-firmware optee-os"
 # u-boot
 PREFERRED_VERSION_u-boot = "v2018.09%"
 EXTRA_IMAGEDEPENDS += " u-boot"
-UBOOT_MACHINE = "m3nulcb_defconfig"
+UBOOT_MACHINE = "r8a77965_ulcb_defconfig"
 
 # libdrm
 PREFERRED_VERSION_libdrm = "2.4.85"
