conf: machine: m3nulcb: Add "sync" to HOSTTOOLS
This adds "sync" command, which is needed for
installing kernel-module-gles, to HOSTTOOLS.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/machine/m3nulcb.conf
+++ b/meta-rcar-gen3-adas/conf/machine/m3nulcb.conf
@@ -40,3 +40,6 @@ PREFERRED_VERSION_libdrm = "2.4.85"
 BUILDCFG_VARS_append = " SOC_FAMILY"
 
 MACHINEOVERRIDES .= ":ulcb"
+
+# Command using to build kernel-module-gles
+HOSTTOOLS += "sync"
