--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -37,7 +37,7 @@ CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
 CONFIG_SENSORS_LM63=y
 CONFIG_RCAR_THERMAL=y
 CONFIG_SH_ETH=y
-CONFIG_BLK_DEV_NVME=m
+CONFIG_BLK_DEV_NVME=y
 CONFIG_SATA_ACARD_AHCI=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
