conf: layer.conf: Fix core-image-weston-sdk build
This fixes the following error when building core-image-weston-sdk:
Error:
 Problem: package openssh-7.5p1-r0.aarch64 conflicts with dropbear
 provided by dropbear-2017.75-r0.aarch64

Disable dropbear when openssh server is enabled to avoid
the conflict.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -49,7 +49,7 @@ IMAGE_INSTALL_append_rcar-gen3 = " \
     gdbserver \
     most-tools \
     perf \
-    dropbear \
+    ${@bb.utils.contains("IMAGE_FEATURES", "ssh-server-openssh", "", "dropbear",d)} \
     opkg \
     git \
     subversion \
