docs: sample: conf: Disable CAS feature
This comments out CAS feature in the local configuration files
for other than H3 and M3 SoCs which avoids the following warning:
  CAS only supports H3 (SoC: r8a7795), M3 (SoC: r8a7796),
  this feature will be disabled automatically

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/docs/sample/conf/condor/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/condor/linaro-gcc/bsp/local.conf
@@ -259,6 +259,6 @@ BBMASK .= "|kernel-module-uvcs-drv|omx-user-module"
 #DISTRO_FEATURES_append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
 
 IMAGE_INSTALL_remove = "optee-linuxdriver optee-linuxdriver-armtz optee-client"
