--- a/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/bsp/local-wayland.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/bsp/local-wayland.conf
@@ -268,4 +268,4 @@ LICENSE_FLAGS_WHITELIST = "commercial"
 #DISTRO_FEATURES_append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
