--- a/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/bsp/local.conf
@@ -258,4 +258,4 @@ BBMASK .= "|kernel-module-uvcs-drv|omx-user-module"
 #DISTRO_FEATURES_append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
