--- a/meta-rcar-gen3-adas/docs/sample/conf/eagle/linaro-gcc/bsp/local.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/eagle/linaro-gcc/bsp/local.conf
@@ -259,6 +259,6 @@ BBMASK .= "|kernel-module-uvcs-drv|omx-user-module"
 #DISTRO_FEATURES_append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
 
 IMAGE_INSTALL_remove = "optee-linuxdriver optee-linuxdriver-armtz optee-client"
