--- a/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/gfx-only/local-wayland.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/linaro-gcc/gfx-only/local-wayland.conf
@@ -277,4 +277,4 @@ RDEPENDS_gstreamer1.0-plugins-bad = "libwayland-egl"
 #DISTRO_FEATURES_append = " iccom"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
