--- a/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/poky-gcc/mmp/local-wayland.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/m3nulcb/poky-gcc/mmp/local-wayland.conf
@@ -378,4 +378,4 @@ DISTRO_FEATURES_append = " aaclcdec_mdw"
 #DISTRO_FEATURES_append = " ivi-shell"
 
 # Add Capacity Aware migration Strategy (CAS)
-MACHINE_FEATURES_append = " cas"
+#MACHINE_FEATURES_append = " cas
