conf: layer.conf: Add LAYERSERIES_COMPAT_rcar-gen3-adas
This adds LAYERSERIES_COMPAT_rcar-gen3-adas = "thud"

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/layer.conf
+++ b/meta-rcar-gen3-adas/conf/layer.conf
@@ -11,6 +11,8 @@ BBFILE_COLLECTIONS += "rcar-gen3-adas"
 BBFILE_PATTERN_rcar-gen3-adas := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rcar-gen3-adas = "7"
 
+LAYERSERIES_COMPAT_rcar-gen3-adas = "thud"
+
 # Custom packages
 IMAGE_INSTALL_append_rcar-gen3 = " \
     kernel-modules \
