recipes-kernel: linux-renesas: Enable polled GPIO keyboard support in ulcb.cfg
This enables CONFIG_KEYBOARD_GPIO_POLLED in ulcb.cfg.
Currently, this is needed for H3ULCB VideoBox v2.1
which has a power key on external GPIO controller.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -53,6 +53,8 @@ CONFIG_SND_SOC_SI468X=y
 CONFIG_SND_SOC_PCM3168A=y
 CONFIG_SND_SOC_PCM3168A_I2C=y
 CONFIG_SND_SOC_WL18XX=y
+CONFIG_INPUT_POLLDEV=y
+CONFIG_KEYBOARD_GPIO_POLLED=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 CONFIG_HID_MULTITOUCH=y
