--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -37,6 +37,7 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_RCAR=y
 CONFIG_USB_ACM=y
+CONFIG_USB_TUSB8041=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
