conf: machine: Update U-Boot configuration file names for V3M/V3H boards
This updates U-Boot conguration file names for R-Car V3M/V3H boards.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/meta-rcar-gen3-adas/conf/machine/v3hsk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3hsk.conf
@@ -34,7 +34,7 @@ EXTRA_IMAGEDEPENDS += " arm-trusted-firmware"
 # u-boot
 PREFERRED_VERSION_u-boot = "v2018.09%"
 EXTRA_IMAGEDEPENDS += " u-boot"
-UBOOT_MACHINE = "v3hsk_defconfig"
+UBOOT_MACHINE = "r8a77980_v3hsk_defconfig"
 
 # libdrm
 PREFERRED_VERSION_libdrm = "2.4.85"
