--- a/meta-rcar-gen3-adas/conf/machine/v3msk.conf
+++ b/meta-rcar-gen3-adas/conf/machine/v3msk.conf
@@ -34,7 +34,7 @@ EXTRA_IMAGEDEPENDS += " arm-trusted-firmware"
 # u-boot
 PREFERRED_VERSION_u-boot = "v2018.09%"
 EXTRA_IMAGEDEPENDS += " u-boot"
-UBOOT_MACHINE = "v3msk_defconfig"
+UBOOT_MACHINE = "r8a77970_v3msk_defconfig"
 
 # libdrm
 PREFERRED_VERSION_libdrm = "2.4.85"
