--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -39,4 +39,5 @@ CONFIG_SH_ETH=y
 CONFIG_SATA_ACARD_AHCI=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
+CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
