--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/eagle.cfg
@@ -31,5 +31,6 @@ CONFIG_MFD_DA9063=y
 CONFIG_INPUT_DA9063_ONKEY=y
 CONFIG_DA9063_WATCHDOG=y
 CONFIG_REGULATOR_DA9063=y
+CONFIG_RCAR_THERMAL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
