--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3mzf.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3mzf.cfg
@@ -22,4 +22,5 @@ CONFIG_SERIAL_SH_SCI_DMA=y
 CONFIG_SPI_SLAVE=y
 CONFIG_SPI_SLAVE_TIME=y
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=y
+CONFIG_RCAR_THERMAL=y
 CONFIG_GPIO_SYSFS=y
