Parallel camera support in upstream rcar-vin dirver on KF

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -19,10 +19,10 @@ CONFIG_GPIO_MAX732X_IRQ=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
-CONFIG_VIDEO_RCAR_VIN_LEGACY=y
-CONFIG_VIDEO_RCAR_CSI2_LEGACY=y
-# CONFIG_VIDEO_RCAR_VIN is not set
-# CONFIG_VIDEO_RCAR_CSI2 is not set
+# CONFIG_VIDEO_RCAR_VIN_LEGACY is not set
+# CONFIG_VIDEO_RCAR_CSI2_LEGACY is not set
+CONFIG_VIDEO_RCAR_VIN=y
+CONFIG_VIDEO_RCAR_CSI2=y
 CONFIG_SOC_CAMERA=y
 CONFIG_SOC_CAMERA_SCALE_CROP=y
 CONFIG_SOC_CAMERA_PLATFORM=y
