GMSL cameras support on KF board and parallel camera fix in media framework
This add GMSL cameras in media framework and fixes parallel camera

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -23,15 +23,18 @@ CONFIG_VIDEO_ADV_DEBUG=y
 # CONFIG_VIDEO_RCAR_CSI2_LEGACY is not set
 CONFIG_VIDEO_RCAR_VIN=y
 CONFIG_VIDEO_RCAR_CSI2=y
-CONFIG_SOC_CAMERA=y
-CONFIG_SOC_CAMERA_SCALE_CROP=y
-CONFIG_SOC_CAMERA_PLATFORM=y
-CONFIG_SOC_CAMERA_MAX9286=y
-CONFIG_SOC_CAMERA_TI9X4=y
-CONFIG_SOC_CAMERA_OV106XX=y
-CONFIG_SOC_CAMERA_OV5647=y
-CONFIG_SOC_CAMERA_OV5642=y
-CONFIG_SOC_CAMERA_IMX219=y
+CONFIG_VIDEO_MAX9286=y
+CONFIG_VIDEO_GMSL_CAMERA=y
+CONFIG_VIDEO_OV5642=y
+# CONFIG_SOC_CAMERA is not set
+# CONFIG_SOC_CAMERA_SCALE_CROP is not set
+# CONFIG_SOC_CAMERA_PLATFORM is not set
+# CONFIG_SOC_CAMERA_MAX9286 is not set
+# CONFIG_SOC_CAMERA_TI9X4 is not set
+# CONFIG_SOC_CAMERA_OV106XX is not set
+# CONFIG_SOC_CAMERA_OV5647 is not set
+# CONFIG_SOC_CAMERA_OV5642 is not set
+# CONFIG_SOC_CAMERA_IMX219 is not set
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
 CONFIG_BT_BNEP=m
