linux-renesas: enable correct RTC driver for new VideoBoxes

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -41,4 +41,4 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
-CONFIG_RTC_DRV_MCP795=y
+CONFIG_RTC_DRV_DS1307=y
