--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3hsk.cfg
@@ -22,6 +22,8 @@ CONFIG_SOC_CAMERA=y
 CONFIG_SOC_CAMERA_SCALE_CROP=y
 CONFIG_SOC_CAMERA_PLATFORM=y
 CONFIG_SOC_CAMERA_MAX9286=y
+CONFIG_SOC_CAMERA_MAX9296=y
+CONFIG_SOC_CAMERA_MAX96712=y
 CONFIG_SOC_CAMERA_TI9X4=y
 CONFIG_SOC_CAMERA_OV106XX=y
 CONFIG_INPUT_TOUCHSCREEN=y
@@ -42,3 +44,4 @@ CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
 CONFIG_RTC_DRV_DS1307=y
+CONFIG_REGULATOR_MAX2008X=y
