ulcb: append GMSL2

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -27,6 +27,8 @@ CONFIG_SOC_CAMERA=y
 CONFIG_SOC_CAMERA_SCALE_CROP=y
 CONFIG_SOC_CAMERA_PLATFORM=y
 CONFIG_SOC_CAMERA_MAX9286=y
+CONFIG_SOC_CAMERA_MAX9296=y
+CONFIG_SOC_CAMERA_MAX96712=y
 CONFIG_SOC_CAMERA_TI9X4=y
 CONFIG_SOC_CAMERA_OV106XX=y
 CONFIG_SOC_CAMERA_OV5647=y
@@ -86,3 +88,4 @@ CONFIG_BLK_DEV_MD=y
 CONFIG_MD_RAID0=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_USB_TUSB8041=y
+CONFIG_REGULATOR_MAX2008X=y
