--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
@@ -50,3 +50,6 @@ CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
 CONFIG_REGULATOR_MAX2008X=y
+CONFIG_VIDEO_RENESAS_VSP1=m
+CONFIG_DRM_RCAR_DU=m
+CONFIG_DRM_RCAR_LVDS=m
