--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/v3x.cfg
@@ -15,8 +15,8 @@ CONFIG_GPIO_MAX732X_IRQ=y
 CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
-CONFIG_VIDEO_RCAR_VIN_LEGACY=m
-CONFIG_VIDEO_RCAR_CSI2_LEGACY=m
+CONFIG_VIDEO_RCAR_VIN_LEGACY=y
+CONFIG_VIDEO_RCAR_CSI2_LEGACY=y
 # CONFIG_VIDEO_RCAR_VIN is not set
 # CONFIG_VIDEO_RCAR_CSI2 is not set
 CONFIG_SOC_CAMERA=y
@@ -50,7 +50,7 @@ CONFIG_DRM_THINE_THC63LVD1024=y
 CONFIG_MCP4725=y
 CONFIG_PHY_RCAR_GEN3_PCIE=y
 CONFIG_REGULATOR_MAX2008X=y
-CONFIG_VIDEO_RENESAS_VSP1=m
-CONFIG_DRM_RCAR_DU=m
-CONFIG_DRM_RCAR_LVDS=m
+CONFIG_VIDEO_RENESAS_VSP1=y
+CONFIG_DRM_RCAR_DU=y
+CONFIG_DRM_RCAR_LVDS=y
 CONFIG_PID_IN_CONTEXTIDR=y
