FPDLINK3 support, dtbo support, cleanup

--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/ulcb.cfg
@@ -20,7 +20,8 @@ CONFIG_GPIO_PCA953X=y
 CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_VIDEO_MAX9286=y
-CONFIG_VIDEO_GMSL_CAMERA=y
+CONFIG_VIDEO_UB9X4=y
+CONFIG_VIDEO_LVDS_CAMERA=y
 CONFIG_VIDEO_OV5642=y
 CONFIG_VIRTIO_RCAR_PCIE=y
 CONFIG_BT=y
